Lab3/myInterpParser.java
// $ANTLR 3.5.2 myInterp.g 2022-05-16 22:00:29

    import java.util.Scanner;
    import java.util.HashMap;
    import java.util.Set;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class myInterpParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AUTO", "AssignmentOP", "BOOLEAN", 
		"BREAK", "CASE", "CHAR", "COMMENT", "CONTINUE", "DEFAULT", "DO", "DOUBLE", 
		"ELSE", "EXTERN", "FLOAT", "FOR", "Floating_point_constant", "IF", "INT", 
		"Identifier", "Integer_constant", "LINE_COMMAND", "LONG", "MAIN", "PRINTF", 
		"REGISTER", "RETURN", "RelationOP", "SCANF", "SHORT", "SIGNED", "SIZEOF", 
		"STATIC", "STRING", "STRINGS", "SWITCH", "UNSIGNED", "VOID", "WHILE", 
		"WS", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", "'\\%'", 
		"'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int AUTO=4;
	public static final int AssignmentOP=5;
	public static final int BOOLEAN=6;
	public static final int BREAK=7;
	public static final int CASE=8;
	public static final int CHAR=9;
	public static final int COMMENT=10;
	public static final int CONTINUE=11;
	public static final int DEFAULT=12;
	public static final int DO=13;
	public static final int DOUBLE=14;
	public static final int ELSE=15;
	public static final int EXTERN=16;
	public static final int FLOAT=17;
	public static final int FOR=18;
	public static final int Floating_point_constant=19;
	public static final int IF=20;
	public static final int INT=21;
	public static final int Identifier=22;
	public static final int Integer_constant=23;
	public static final int LINE_COMMAND=24;
	public static final int LONG=25;
	public static final int MAIN=26;
	public static final int PRINTF=27;
	public static final int REGISTER=28;
	public static final int RETURN=29;
	public static final int RelationOP=30;
	public static final int SCANF=31;
	public static final int SHORT=32;
	public static final int SIGNED=33;
	public static final int SIZEOF=34;
	public static final int STATIC=35;
	public static final int STRING=36;
	public static final int STRINGS=37;
	public static final int SWITCH=38;
	public static final int UNSIGNED=39;
	public static final int VOID=40;
	public static final int WHILE=41;
	public static final int WS=42;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myInterpParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myInterpParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myInterpParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myInterp.g"; }


	    boolean TRACEON = true;
	    HashMap memory = new HashMap();



	// $ANTLR start "program"
	// myInterp.g:19:1: program : ( VOID MAIN '(' ')' '{' statements[1] '}' | INT MAIN '(' ')' '{' statements[1] '}' );
	public final void program() throws RecognitionException {
		try {
			// myInterp.g:19:8: ( VOID MAIN '(' ')' '{' statements[1] '}' | INT MAIN '(' ')' '{' statements[1] '}' )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==VOID) ) {
				alt1=1;
			}
			else if ( (LA1_0==INT) ) {
				alt1=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// myInterp.g:20:2: VOID MAIN '(' ')' '{' statements[1] '}'
					{
					match(input,VOID,FOLLOW_VOID_in_program45); if (state.failed) return;
					match(input,MAIN,FOLLOW_MAIN_in_program47); if (state.failed) return;
					match(input,44,FOLLOW_44_in_program49); if (state.failed) return;
					match(input,45,FOLLOW_45_in_program51); if (state.failed) return;
					match(input,53,FOLLOW_53_in_program53); if (state.failed) return;
					pushFollow(FOLLOW_statements_in_program55);
					statements(1);
					state._fsp--;
					if (state.failed) return;
					match(input,54,FOLLOW_54_in_program58); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("VOID MAIN () {declarations statements}");}
					}
					break;
				case 2 :
					// myInterp.g:22:7: INT MAIN '(' ')' '{' statements[1] '}'
					{
					match(input,INT,FOLLOW_INT_in_program76); if (state.failed) return;
					match(input,MAIN,FOLLOW_MAIN_in_program78); if (state.failed) return;
					match(input,44,FOLLOW_44_in_program80); if (state.failed) return;
					match(input,45,FOLLOW_45_in_program82); if (state.failed) return;
					match(input,53,FOLLOW_53_in_program84); if (state.failed) return;
					pushFollow(FOLLOW_statements_in_program86);
					statements(1);
					state._fsp--;
					if (state.failed) return;
					match(input,54,FOLLOW_54_in_program89); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("INT MAIN () {declarations statements}");}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "type"
	// myInterp.g:27:1: type : ( FLOAT | INT | DOUBLE | CHAR | SHORT | LONG | SIGNED | UNSIGNED | BOOLEAN | STRING | VOID );
	public final void type() throws RecognitionException {
		try {
			// myInterp.g:27:5: ( FLOAT | INT | DOUBLE | CHAR | SHORT | LONG | SIGNED | UNSIGNED | BOOLEAN | STRING | VOID )
			int alt2=11;
			switch ( input.LA(1) ) {
			case FLOAT:
				{
				alt2=1;
				}
				break;
			case INT:
				{
				alt2=2;
				}
				break;
			case DOUBLE:
				{
				alt2=3;
				}
				break;
			case CHAR:
				{
				alt2=4;
				}
				break;
			case SHORT:
				{
				alt2=5;
				}
				break;
			case LONG:
				{
				alt2=6;
				}
				break;
			case SIGNED:
				{
				alt2=7;
				}
				break;
			case UNSIGNED:
				{
				alt2=8;
				}
				break;
			case BOOLEAN:
				{
				alt2=9;
				}
				break;
			case STRING:
				{
				alt2=10;
				}
				break;
			case VOID:
				{
				alt2=11;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// myInterp.g:27:7: FLOAT
					{
					match(input,FLOAT,FOLLOW_FLOAT_in_type109); if (state.failed) return;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: FLOAT"); }
					}
					break;
				case 2 :
					// myInterp.g:28:4: INT
					{
					match(input,INT,FOLLOW_INT_in_type116); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: INT"); }
					}
					break;
				case 3 :
					// myInterp.g:29:4: DOUBLE
					{
					match(input,DOUBLE,FOLLOW_DOUBLE_in_type123); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: DOUBLE");}
					}
					break;
				case 4 :
					// myInterp.g:30:4: CHAR
					{
					match(input,CHAR,FOLLOW_CHAR_in_type130); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: CHAR");}
					}
					break;
				case 5 :
					// myInterp.g:31:4: SHORT
					{
					match(input,SHORT,FOLLOW_SHORT_in_type137); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: SHORT");}
					}
					break;
				case 6 :
					// myInterp.g:32:4: LONG
					{
					match(input,LONG,FOLLOW_LONG_in_type144); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: LONG");}
					}
					break;
				case 7 :
					// myInterp.g:33:4: SIGNED
					{
					match(input,SIGNED,FOLLOW_SIGNED_in_type151); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: SIGNED");}
					}
					break;
				case 8 :
					// myInterp.g:34:4: UNSIGNED
					{
					match(input,UNSIGNED,FOLLOW_UNSIGNED_in_type158); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: UNSIGNED");}
					}
					break;
				case 9 :
					// myInterp.g:35:4: BOOLEAN
					{
					match(input,BOOLEAN,FOLLOW_BOOLEAN_in_type165); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: BOOLEAN");}
					}
					break;
				case 10 :
					// myInterp.g:36:4: STRING
					{
					match(input,STRING,FOLLOW_STRING_in_type172); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: STRING");}
					}
					break;
				case 11 :
					// myInterp.g:37:4: VOID
					{
					match(input,VOID,FOLLOW_VOID_in_type179); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: VOID");}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type"



	// $ANTLR start "statements"
	// myInterp.g:40:1: statements[int flag] : ( statement[$flag] statements[$flag] |);
	public final void statements(int flag) throws RecognitionException {
		try {
			// myInterp.g:40:21: ( statement[$flag] statements[$flag] |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( ((LA3_0 >= BOOLEAN && LA3_0 <= BREAK)||LA3_0==CHAR||LA3_0==CONTINUE||LA3_0==DOUBLE||LA3_0==FLOAT||(LA3_0 >= IF && LA3_0 <= Identifier)||LA3_0==LONG||LA3_0==PRINTF||LA3_0==RETURN||(LA3_0 >= SCANF && LA3_0 <= SIGNED)||LA3_0==STRING||(LA3_0 >= UNSIGNED && LA3_0 <= VOID)||LA3_0==51) ) {
				alt3=1;
			}
			else if ( (LA3_0==EOF||LA3_0==54) ) {
				alt3=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// myInterp.g:41:2: statement[$flag] statements[$flag]
					{
					pushFollow(FOLLOW_statement_in_statements192);
					statement(flag);
					state._fsp--;
					if (state.failed) return;
					pushFollow(FOLLOW_statements_in_statements195);
					statements(flag);
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// myInterp.g:43:2: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statements"



	// $ANTLR start "statement"
	// myInterp.g:46:1: statement[int flag0] : ( declarations_statement | assignment_statement[$flag0] ';' | if_statement[$flag0] | printf_func[$flag0] ';' | scanf_func[$flag0] ';' | jump_statement );
	public final void statement(int flag0) throws RecognitionException {
		try {
			// myInterp.g:46:22: ( declarations_statement | assignment_statement[$flag0] ';' | if_statement[$flag0] | printf_func[$flag0] ';' | scanf_func[$flag0] ';' | jump_statement )
			int alt4=6;
			switch ( input.LA(1) ) {
			case FLOAT:
				{
				int LA4_1 = input.LA(2);
				if ( (LA4_1==Identifier) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==48||LA4_17==51) ) {
						alt4=1;
					}
					else if ( (LA4_17==AssignmentOP) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case INT:
				{
				int LA4_2 = input.LA(2);
				if ( (LA4_2==Identifier) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==48||LA4_17==51) ) {
						alt4=1;
					}
					else if ( (LA4_17==AssignmentOP) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DOUBLE:
				{
				int LA4_3 = input.LA(2);
				if ( (LA4_3==Identifier) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==48||LA4_17==51) ) {
						alt4=1;
					}
					else if ( (LA4_17==AssignmentOP) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
				{
				int LA4_4 = input.LA(2);
				if ( (LA4_4==Identifier) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==48||LA4_17==51) ) {
						alt4=1;
					}
					else if ( (LA4_17==AssignmentOP) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case SHORT:
				{
				int LA4_5 = input.LA(2);
				if ( (LA4_5==Identifier) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==48||LA4_17==51) ) {
						alt4=1;
					}
					else if ( (LA4_17==AssignmentOP) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 5, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case LONG:
				{
				int LA4_6 = input.LA(2);
				if ( (LA4_6==Identifier) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==48||LA4_17==51) ) {
						alt4=1;
					}
					else if ( (LA4_17==AssignmentOP) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 6, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case SIGNED:
				{
				int LA4_7 = input.LA(2);
				if ( (LA4_7==Identifier) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==48||LA4_17==51) ) {
						alt4=1;
					}
					else if ( (LA4_17==AssignmentOP) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 7, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case UNSIGNED:
				{
				int LA4_8 = input.LA(2);
				if ( (LA4_8==Identifier) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==48||LA4_17==51) ) {
						alt4=1;
					}
					else if ( (LA4_17==AssignmentOP) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 8, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case BOOLEAN:
				{
				int LA4_9 = input.LA(2);
				if ( (LA4_9==Identifier) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==48||LA4_17==51) ) {
						alt4=1;
					}
					else if ( (LA4_17==AssignmentOP) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 9, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case STRING:
				{
				int LA4_10 = input.LA(2);
				if ( (LA4_10==Identifier) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==48||LA4_17==51) ) {
						alt4=1;
					}
					else if ( (LA4_17==AssignmentOP) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 10, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case VOID:
				{
				int LA4_11 = input.LA(2);
				if ( (LA4_11==Identifier) ) {
					int LA4_17 = input.LA(3);
					if ( (LA4_17==48||LA4_17==51) ) {
						alt4=1;
					}
					else if ( (LA4_17==AssignmentOP) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 11, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case Identifier:
				{
				alt4=2;
				}
				break;
			case IF:
				{
				alt4=3;
				}
				break;
			case PRINTF:
				{
				alt4=4;
				}
				break;
			case SCANF:
				{
				alt4=5;
				}
				break;
			case BREAK:
			case CONTINUE:
			case RETURN:
			case 51:
				{
				alt4=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// myInterp.g:47:2: declarations_statement
					{
					pushFollow(FOLLOW_declarations_statement_in_statement212);
					declarations_statement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// myInterp.g:48:4: assignment_statement[$flag0] ';'
					{
					pushFollow(FOLLOW_assignment_statement_in_statement217);
					assignment_statement(flag0);
					state._fsp--;
					if (state.failed) return;
					match(input,51,FOLLOW_51_in_statement220); if (state.failed) return;
					}
					break;
				case 3 :
					// myInterp.g:49:4: if_statement[$flag0]
					{
					pushFollow(FOLLOW_if_statement_in_statement225);
					if_statement(flag0);
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 4 :
					// myInterp.g:50:4: printf_func[$flag0] ';'
					{
					pushFollow(FOLLOW_printf_func_in_statement231);
					printf_func(flag0);
					state._fsp--;
					if (state.failed) return;
					match(input,51,FOLLOW_51_in_statement235); if (state.failed) return;
					}
					break;
				case 5 :
					// myInterp.g:51:4: scanf_func[$flag0] ';'
					{
					pushFollow(FOLLOW_scanf_func_in_statement240);
					scanf_func(flag0);
					state._fsp--;
					if (state.failed) return;
					match(input,51,FOLLOW_51_in_statement244); if (state.failed) return;
					}
					break;
				case 6 :
					// myInterp.g:52:4: jump_statement
					{
					pushFollow(FOLLOW_jump_statement_in_statement249);
					jump_statement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
